# FreeNOS

./: .gitignore  CMakeLists.txt
kernel/: Kernel.cpp
